fix title link on mobile

--- a/public/global.css
+++ b/public/global.css
@@ -144,6 +144,10 @@ photo {
   cursor: pointer;
 }
 
+.blog-name {
+  z-index: 1;
+}
+
 @media only screen and (max-width: 700px) {
   .image-modal-content {
     width: 100%;
